--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Club Magellano - Weather App</title>
     <link rel="icon" type="image" href="./src/assets/club-magellano-logo-edit.png">
+    <link rel="stylesheet" href="https://api.fontshare.com/css?f[]=satoshi@300,400,500,700&display=swap">
   </head>
   <body>
     <div id="app"></div>
